# SPD-Distr-Parallel-Perfomance

./: CMakeLists.txt  MPIbenchmark.sh  average.c  magicSquare.h  msMPI.c  msMPI.h  n3.txt  time_test.h
outputs/: benchmark_average.out
outputs/hybrid/: i10001.txt  i1001.txt  i15001.txt  i2001.txt  i5001.txt  i501.txt  i7501.txt  n10001.txt  n1001.txt  n15001.txt  n2001.txt  n5001.txt  n501.txt  n7501.txt  p10001.txt  p1001.txt  p101.txt  p1023.txt  p15001.txt  p2047.txt  p4095.txt  p8191.txt
outputs/mpi/: i10001.txt  i1001.txt  i15001.txt  i20001.txt  i2001.txt  i5001.txt  i501.txt  n10001.txt  n1001.txt  n15001.txt  n20001.txt  n2001.txt  n5001.txt  n501.txt  p10001.txt  p10001_results.txt  p1001.txt  p1001_results.txt  p101.txt  p101_results.txt  p15001.txt  p15001_results.txt  p8191.txt  p8191_results.txt
outputs/old/: p10001_out_seq.txt  p10001_output_multithread.txt  p10001_output_sequential.txt  p1001_out_multi.txt  p15001_out_multi.txt  p15001_out_seq.txt  p2001_out_multi.txt  p2001_out_seq.txt  p201_out_multi.txt  p201_out_seq.txt  p2_out_multi.txt  p2_out_seq.txt  p3000_output_multithread.txt  p3000_output_sequential.txt  p5001_output_multithread.txt  p5001_output_sequential.txt  p501_out_multi.txt  p501_out_seq.txt
outputs/seq/: _i10001.txt  _i1001.txt  _i1023.txt  _i127.txt  _i15.txt  _i15001.txt  _i20001.txt  _i2001.txt  _i2047.txt  _i255.txt  _i31.txt  _i4095.txt  _i5001.txt  _i511.txt  _i63.txt  _i7.txt  _i8191.txt  _n10001.txt  (+39 more)
src/: average.c  magicSquare.h  msHybrid.c  msMPI.c  msOMP.c  msOMP.h  msPthreads.c  msPthreads.h  msSeq.c  msSeq.h
(+289 files in other folders)
